--- a/src/Settings.xaml
+++ b/src/Settings.xaml
@@ -140,21 +140,95 @@
                             <Button Content="Toggle Overlay Lock" Click="ImageOverlay_ToggleLock"></Button>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock VerticalAlignment="Center" FontWeight="Bold" MinWidth="205"/>
+                            <TextBlock Text="Thresholds" VerticalAlignment="Center" FontWeight="Bold" MinWidth="80"/>
+                            <TextBlock Text="Color" VerticalAlignment="Center" FontWeight="Bold" MinWidth="125"/>
                             <TextBlock Text="Enable" VerticalAlignment="Center" FontWeight="Bold"  />
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="Health Threshold" VerticalAlignment="Center" FontWeight="Bold"  MinWidth="140"/>
+                            <TextBlock Text="Health" VerticalAlignment="Center" FontWeight="Medium" MinWidth="65"/>
+                            <xctk:ColorPicker Name="Health_Color" SelectedColor="{Binding Health_Color}" SelectedColorChanged="OverlayColor_Selected" 
+                                MinWidth="65" MaxWidth="65" Margin="5, 0, 5, 0"/>
                             <TextBox x:Name="HealthThreshold_Value" TextChanged="HealthThreshold_Value_TextChanged" MinWidth="60" 
                                 Text="{Binding Zeal_HealthThreshold}" PreviewTextInput="Threshold_Value_PreviewTextInput"/>
                             <CheckBox Name="Zeal_HealthThreshEnabledCheck" IsChecked="{Binding Zeal_HealthThresholdEnabled}" Click="SaveSettings" MinWidth="20" Margin="15,0,0,0"></CheckBox>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Margin="0,4,0,0">
-                            <TextBlock Text="Mana Threshold" VerticalAlignment="Center" FontWeight="Bold"  MinWidth="140"/>
+                            <TextBlock Text="Mana" VerticalAlignment="Center" FontWeight="Medium" MinWidth="65"/>
+                            <xctk:ColorPicker Name="Mana_Color" SelectedColor="{Binding Mana_Color}" SelectedColorChanged="OverlayColor_Selected" 
+                                MinWidth="65" MaxWidth="65" Margin="5, 0, 5, 0"/>
                             <TextBox x:Name="ManaThreshold_Value" MinWidth="60" TextChanged="ManaThreshold_Value_TextChanged" 
                                 Text="{Binding Zeal_ManaThreshold}" PreviewTextInput="Threshold_Value_PreviewTextInput"/>
                             <CheckBox Name="Zeal_ManaThreshEnabledCheck" IsChecked="{Binding Zeal_ManaThresholdEnabled}" Click="SaveSettings" MinWidth="20" Margin="15,0,0,0"></CheckBox>
                         </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,4,0,0">
+                            <TextBlock Text="Both" VerticalAlignment="Center" FontWeight="Medium" MinWidth="65"/>
+                            <xctk:ColorPicker Name="Health_Mana_Color" SelectedColor="{Binding Health_Mana_Color}" SelectedColorChanged="OverlayColor_Selected" 
+                                MinWidth="65" MaxWidth="65" Margin="5, 0, 5, 0"/>
+                        </StackPanel>
+                        <Separator/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <StackPanel Orientation="Vertical" Grid.Column="0">
+                                <TextBlock Text="Health" VerticalAlignment="Center" Grid.Row="0" FontWeight="Bold" Margin="67,0,0,0"/>
+                                <StackPanel Orientation="Horizontal" Grid.Row="1">
+                                    <TextBlock Text="Top" MinWidth="45"/>
+                                    <CheckBox Name="Health_ShowTop_Check" IsChecked="{Binding Health_ShowTop}" Click="SaveSettings" MinWidth="20" Margin="35,0,0,0"/>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Grid.Row="2">
+                                    <TextBlock Text="Left" MinWidth="45"/>
+                                    <CheckBox Name="Health_ShowLeft_Check" IsChecked="{Binding Health_ShowLeft}" Click="SaveSettings" MinWidth="20" Margin="35,0,0,0"/>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Grid.Row="3">
+                                    <TextBlock Text="Right" MinWidth="45"/>
+                                    <CheckBox Name="Health_ShowRight_Check" IsChecked="{Binding Health_ShowRight}" Click="SaveSettings" MinWidth="20" Margin="35,0,0,0"/>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Grid.Row="4">
+                                    <TextBlock Text="Bottom" MinWidth="45"/>
+                                    <CheckBox Name="Health_ShowBottom_Check" IsChecked="{Binding Health_ShowBottom}" Click="SaveSettings" MinWidth="20" Margin="35,0,0,0"/>
+                                </StackPanel>
+                            </StackPanel>
+                            <StackPanel Orientation="Vertical" Grid.Column="1">
+                                <TextBlock Text="Mana" VerticalAlignment="Center" Grid.Row="0" FontWeight="Bold" Margin="27,0,0,0"/>
+                                <StackPanel Orientation="Horizontal" Grid.Row="1">
+                                    <CheckBox Name="Mana_ShowTop_Check" IsChecked="{Binding Mana_ShowTop}" Click="SaveSettings" MinWidth="20" Margin="35,0,0,0"></CheckBox>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Grid.Row="2">
+                                    <CheckBox Name="Mana_ShowLeft_Check" IsChecked="{Binding Mana_ShowLeft}" Click="SaveSettings" MinWidth="20" Margin="35,0,0,0"></CheckBox>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Grid.Row="3">
+                                    <CheckBox Name="Mana_ShowRight_Check" IsChecked="{Binding Mana_ShowRight}" Click="SaveSettings" MinWidth="20" Margin="35,0,0,0"></CheckBox>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Grid.Row="4">
+                                    <CheckBox Name="Mana_ShowBottom_Check" IsChecked="{Binding Mana_ShowBottom}" Click="SaveSettings" MinWidth="20" Margin="35,0,0,0"></CheckBox>
+                                </StackPanel>
+                            </StackPanel>
+                            <StackPanel Orientation="Vertical" Grid.Column="2">
+                                <TextBlock Text="Size" VerticalAlignment="Center" Grid.Row="0" FontWeight="Bold" Margin="27,0,0,0"/>
+                                <TextBox x:Name="StaticOverlay_SizeTop" MinWidth="60" TextChanged="StaticOverlay_SizeChanged" 
+                                    Text="{Binding StaticOverlay_SizeTop}" PreviewTextInput="Threshold_Value_PreviewTextInput" Grid.Row="1" 
+                                    Height="14" Margin="0,1,0,0"/>
+                                <TextBox x:Name="StaticOverlay_SizeLeft" MinWidth="60" TextChanged="StaticOverlay_SizeChanged" 
+                                Text="{Binding StaticOverlay_SizeLeft}" PreviewTextInput="Threshold_Value_PreviewTextInput" Grid.Row="2"
+                                    Height="14" Margin="0,1,0,0"/>
+                                <TextBox x:Name="StaticOverlay_SizeRight" MinWidth="60" TextChanged="StaticOverlay_SizeChanged" 
+                                Text="{Binding StaticOverlay_SizeRight}" PreviewTextInput="Threshold_Value_PreviewTextInput" Grid.Row="3"
+                                    Height="14" Margin="0,1,0,0"/>
+                                <TextBox x:Name="StaticOverlay_SizeBottom" MinWidth="60" TextChanged="StaticOverlay_SizeChanged" 
+                                Text="{Binding StaticOverlay_SizeBottom}" PreviewTextInput="Threshold_Value_PreviewTextInput" Grid.Row="4"
+                                    Height="14" Margin="0,1,0,0"/>
+                            </StackPanel>
+                        </Grid>
                     </StackPanel>
                 </Expander>
                 <Separator/>
@@ -506,6 +580,11 @@
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Location Share" VerticalAlignment="Center"  FontWeight="Bold" MinWidth="100"/>
                     <ComboBox SelectedItem="{Binding ActivePlayer.Player.MapLocationSharing}" ItemsSource="{Binding LocationShareOptions}" SelectionChanged="SaveSettings" MinWidth="150"></ComboBox>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,2,0,0">
+                    <TextBlock Text="Force 'Guild'" VerticalAlignment="Center" FontWeight="Bold" MinWidth="100">
+                    </TextBlock>
+                    <CheckBox IsChecked="{Binding GuildInstance_Force}" Click="SaveAlwaysOntopCheckBoxSettings" ></CheckBox>
                 </StackPanel>
                 <Separator/>
                 <StackPanel Orientation="Horizontal">
