--- a/src/ImageOverlay.xaml
+++ b/src/ImageOverlay.xaml
@@ -4,34 +4,37 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EQTool"
+        xmlns:jsdrag="clr-namespace:EQTool.Controls"
         Loaded="Window_Loaded"
         mc:Ignorable="d" 
         Style="{DynamicResource MyEventWindowStyle}"
-        Height="320" 
-        Width="320"  
+        Height="1440" 
+        Width="2560"  
         WindowStyle="None"  
         AllowsTransparency="True">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid Name="Mover" Grid.Row="1" Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" MouseLeftButtonDown="DragWindow" Width="24" Height="24">
-            <StackPanel Background="Red" Margin="4, 4, 4, 4"></StackPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid Name="Mover" Grid.Row="1" Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" MouseLeftButtonDown="DragWindow" Width="24" Height="24">
+                <StackPanel Background="Red" Margin="4, 4, 4, 4"></StackPanel>
+            </Grid>
+            <Rectangle x:Name="Gradient_Top" Height="{Binding StaticOverlay_SizeTop}" Grid.Row="0" Grid.ColumnSpan="3" VerticalAlignment="Top"/>
+
+            <Rectangle x:Name="Gradient_Left" Width="{Binding StaticOverlay_SizeRight}" Grid.RowSpan="3" Grid.Column="0" HorizontalAlignment="Left"/>
+
+            <Rectangle x:Name="Gradient_Right" Width="{Binding StaticOverlay_SizeRight}" Grid.RowSpan="3" Grid.Column="2" HorizontalAlignment="Right"/>
+
+            <Rectangle x:Name="Gradient_Bottom" Height="{Binding StaticOverlay_SizeBottom}" Grid.Row="2" Grid.ColumnSpan="3" VerticalAlignment="Bottom"/>
+            <jsdrag:DragCanvas x:Name="AuraContainer" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="3" Margin="0,0,0,0" Background="Transparent">
+
+            </jsdrag:DragCanvas>
         </Grid>
-        <Rectangle x:Name="Gradient_Top" Height="{Binding StaticOverlay_SizeTop}" Grid.Row="0" Grid.ColumnSpan="3" VerticalAlignment="Top"/>
-
-        <Rectangle x:Name="Gradient_Left" Width="{Binding StaticOverlay_SizeRight}" Grid.RowSpan="3" Grid.Column="0" HorizontalAlignment="Left"/>
-
-        <Rectangle x:Name="Gradient_Right" Width="{Binding StaticOverlay_SizeRight}" Grid.RowSpan="3" Grid.Column="2" HorizontalAlignment="Right"/>
-
-        <Rectangle x:Name="Gradient_Bottom" Height="{Binding StaticOverlay_SizeBottom}" Grid.Row="2" Grid.ColumnSpan="3" VerticalAlignment="Bottom"/>
-
-    </Grid>
 </local:BaseSaveStateWindow>
